{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 97,
  "lineage": "199f4053-88d3-bf0d-ef00-87c7295ed3e7",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app-net-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/networkInterfaces/app-network",
            "internal_domain_name_suffix": "sabndwapspqejixim2ul54y0xg.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "app-webserver",
                "primary": true,
                "private_ip_address": "192.168.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "canadacentral",
            "name": "app-network",
            "private_ip_address": "192.168.2.4",
            "private_ip_addresses": [
              "192.168.2.4"
            ],
            "resource_group_name": "TeamB-Resource-Group"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.app-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web-net-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/networkInterfaces/web-network",
            "internal_domain_name_suffix": "sabndwapspqejixim2ul54y0xg.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-webserver",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "canadacentral",
            "name": "web-network",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "TeamB-Resource-Group"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.web-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "TeamB-Resource-Group",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "TeamB-Resource-Group",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "TeamB-Resource-Group",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d8d10290-930f-44e0-a2e8-6728bffb1abe",
            "id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/virtualNetworks/vnet01",
            "location": "canadacentral",
            "name": "vnet01",
            "resource_group_name": "TeamB-Resource-Group"
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "canadacentral",
            "name": "app-nsg",
            "resource_group_name": "TeamB-Resource-Group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "canadacentral",
            "name": "db-nsg",
            "resource_group_name": "TeamB-Resource-Group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-3",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "canadacentral",
            "name": "web-nsg",
            "resource_group_name": "TeamB-Resource-Group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-2",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.app-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs",
            "module.securitygroup.azurerm_network_security_group.app-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.db-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs",
            "module.securitygroup.azurerm_network_security_group.db-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/be3a73f2-6e1b-49cd-8a7a-770625461de4/resourceGroups/TeamB-Resource-Group/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.web-subnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.azure-stack-rs",
            "module.securitygroup.azurerm_network_security_group.web-nsg"
          ]
        }
      ]
    }
  ]
}